# palletizer_pattern_generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ppg/: __main__.py  utils.py
tests/: test_utils.py
